added touch controls with gamepad support